fix: consistent form label spacing

--- a/src/components/reusable/radioButton/radioButtonGroup.scss
+++ b/src/components/reusable/radioButton/radioButtonGroup.scss
@@ -17,7 +17,7 @@ legend {
   text-transform: uppercase;
   font-weight: 500;
   padding: 0;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 
   fieldset[disabled] & {
     color: var(--kd-color-text-disabled);
@@ -37,7 +37,7 @@ legend {
   display: flex;
   align-items: center;
   color: var(--kd-color-text-error);
-  margin-top: 10px;
+  margin-top: 8px;
 
   kd-icon {
     margin-right: 8px;
