--- a/src/components/reusable/textArea/textArea.scss
+++ b/src/components/reusable/textArea/textArea.scss
@@ -34,8 +34,10 @@ textarea {
   @include typography.type-body-02;
   -webkit-appearance: none;
   appearance: none;
+  display: block;
   border: 1px solid var(--kd-color-border-ui);
   border-radius: 4px;
+  margin: 0;
   padding: 16px;
   color: var(--kd-color-text-primary);
   transition: background-color 150ms ease-out, border-color 150ms ease-out,
